added apk to the download buttons

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                     <a href="blog.html">Blog</a>
                     <a href="#contact-form">Contact</a>
                 </div>
-                <button class="download-button">Download</button>
+                <a href="./assets/app/app-debug.apk" download>
+                    <button class="download-button">Download</button>
+                </a>
                 <div class="user-avatar"></div>
             </div>
         </header>
@@ -49,7 +51,9 @@
                                 <h1 class="hero-title">Suraksha Mitra: Combining technology and care to protect you</h1>
                                 <h2 class="hero-subtitle">Suraksha Mitra is a smart safety companion designed to provide instant help at the tap of a button. Combining powerful technology with trusted care, it ensures protection, connectivity, and peace of mind in every emergency.</h2>
                             </div>
-                            <button class="download-button">Download</button>
+                            <a href="./assets/app/app-debug.apk" download>
+                                <button class="download-button">Download</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -296,7 +300,9 @@
                 <h2 class="section-header">Download the App</h2>
                 <div class="download-section">
                     <div class="download-buttons">
-                        <button class="download-button">Download Now</button>
+                        <a href="./assets/app/app-debug.apk" download>
+                            <button class="download-button">Download</button>
+                        </a>
                     </div>
                 </div>
 
